[package]
name = "inventory"
version = "0.1.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Typed distributed plugin registration"
repository = "https://github.com/dtolnay/inventory"
documentation = "https://docs.rs/inventory"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "dtolnay/inventory" }

[dependencies]
# Force the 0.1.16 version. It causes problem in wasmi `#[ctor] is not supported on the current target`. Last check: 7th Jan 2021
ctor = "=0.1.16"
ghost = "0.1.1"
inventory-impl = { version = "=0.1.5", path = "impl" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[workspace]
members = ["impl"]

[features]
default = []
mesalock_sgx = ["sgx_tstd"]
